# Memory-Game

./: CMakeLists.txt  LICENSE  README.md  card.c  card.h  gameCcode.c  gamedep.c  gamedep.h  login.c  login.css  login.h  main.c  memory game.cbp  memory game.depend  memory game.layout  menu.c  menu.h  textureAndRendering.c  textureAndRendering.h  users.txt
rsc/: gameboard.glade  users.txt
rsc/glade/: #gameboard.glade#  #gameboard.glade#~  gameboard.glade  gameboard.glade~  login.glade  menu.glade
src/: card.c  card.h  login.c  login.css  main.c  menu.c  menu.h
src/glade/: gameboard.glade  memorygame2.glade
src/include/: card.h  login.h  menu.h
